More mobile friendly... with zurb and a viewport callout...flicker nave fix attempt 2

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -4,10 +4,6 @@
 
 $grayMediumLight: #eaeaea;
 
-{
-  -webkit-backface-visibility: hidden;
-}
-
 @mixin box_sizing {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
@@ -15,6 +11,13 @@ $grayMediumLight: #eaeaea;
 }
 
 /* universal */
+
+
+{
+  -webkit-backface-visibility: hidden;
+}
+    
+.navbar-nav { -webkit-backface-visibility: hidden; }
 
 html {
   overflow-y: scroll;
